# aeromet-py

./: .bumpversion.cfg  .gitignore  .isort.cfg  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
aeromet_py/: __init__.py  __main__.py
aeromet_py/database/: __init__.py  countries.py  stations.py  stations_db.py
aeromet_py/metar/: metar.py
aeromet_py/models/: __init__.py  change_indicator.py  cloud.py  data_descriptor.py  descriptor.py  descriptors.py  distance.py  errors.py  flight_rules.py  forecast.py  group.py  modifier.py  numeric.py  pressure.py  recent_weather.py  regexp.py  report.py  runway_range.py  runway_state.py  sea_state.py  sections.py  sky.py  station.py  string_attribute.py  temperature.py  temperatures.py  time.py  trend.py  type.py  visibility.py  weather.py  wind.py  wind_variation.py  windshear.py
aeromet_py/reports/: metar.py  taf.py
aeromet_py/utils/: __init__.py  conversions.py  metar_regexp.py  parser.py  regexp.py  sky_translations.py  split.py  taf_regexp.py
docs/: docs.md
tests/metar/: test_cloud.py  test_flight_rules.py  test_modifier.py  test_pressure.py  test_recent_weather.py  test_runway_range.py  test_runway_state.py  test_sea_state.py  test_sections.py  test_should_be_cavok.py  test_sky.py  test_station.py  test_temperatures.py  test_time.py  test_trend.py  test_trend_cloud.py  test_trend_visibility.py  test_trend_weather.py  test_trend_wind.py  test_type.py  test_unparsed_groups.py  test_visibility.py  test_weather.py  test_weather_trend_cloud.py  test_weathers.py  (+6 more)
trash/: main.py
(+96 files in other folders)
