[tool.poetry]
name = "aeromet-py"
version = "0.1.0"
description = "Python library to parse meteorological information of aeronautical stations."
authors = ["diego-garro <diego.garromolina@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.950"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.2"
mypy = "^0.950"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
