[tool.poetry]
name = "aeromet-py"
version = "0.1.1"
description = "Python library to parse meteorological information of aeronautical stations."
readme = "README.md"
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
license = "MIT"
documentation = "https://github.com/TAF-Verification/aeromet-py/blob/docs/docs/docs.md"
repository = "https://github.com/TAF-Verification/aeromet-py"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
codecov = "^2.1.12"
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
